apply correct font parameters to container-3 text and align text according to assignment specifications

--- a/style.css
+++ b/style.css
@@ -118,24 +118,25 @@ a {
     background-color: #e5e7eb;
     display: flex;
     flex-direction: column;
-    
+    align-items: center;
 }
 
 .quote {
     display: flex;
     flex-wrap: wrap;
+    font-weight: 100;
     font-size: 36px; 
     font-style: italic; 
     color: #1f2937;
-    max-width: 900px;
-    margin-top: 48px;
+    max-width: 775px;
+    margin-top: 125px;
 }
 
 .thor {
     display: flex;
-    justify-content: end;
     font-size: 24px;
     color: #1f2937;
     font-weight: bold;
-    margin-bottom: 48px;
+    margin-left: 500px;
+    margin-bottom: 100px;
 }
